N8n/PostgreSQL StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: n8n

spec:
  serviceName: postgres

  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      securityContext:
        fsGroup: 999

      containers:

      - name: postgres
        image: postgres:15.8

        ports:
        - containerPort: 5432

        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 2
            memory: 4Gi

        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data

        livenessProbe:
          tcpSocket:
            port: 5432

        readinessProbe:
          tcpSocket:
            port: 5432

  volumeClaimTemplates:
  - metadata:
      name: pgdata

    spec:
      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 20Gi
