N8n/deployment-n8n.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n

spec:
  replicas: 1

  selector:
    matchLabels:
      app: n8n

  template:
    metadata:
      labels:
        app: n8n

    spec:
      serviceAccountName: n8n
      terminationGracePeriodSeconds: 30

      containers:

      - name: n8n
        image: n8nio/n8n:1.84.1
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 5678

        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 2
            memory: 4Gi

        startupProbe:
          httpGet:
            path: /healthz
            port: 5678
          failureThreshold: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 30
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 60
          periodSeconds: 20

        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false

        volumeMounts:
        - name: n8n-data
          mountPath: /home/node/.n8n


      - name: tailscale
        image: tailscale/tailscale:stable
        imagePullPolicy: IfNotPresent

        securityContext:
          privileged: true
          capabilities:
            add:
            - NET_ADMIN

        volumeMounts:
        - name: tailscale-state
          mountPath: /var/lib/tailscale

      volumes:

      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-pvc

      - name: tailscale-state
        emptyDir: {}
