N8n/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: n8n

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
  - port: 5432
