N8n/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: n8n
  namespace: n8n

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - n8n.local.com

    secretName: n8n-tls

  rules:
  - host: n8n.local.com

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: n8n-service
            port:
              number: 80
