N8n/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-policy
  namespace: n8n

spec:
  podSelector:
    matchLabels:
      app: postgres

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: n8n
